# vulkan-step-by-step

./: .gitignore  CMakeLists.txt  README.md
shaders/: textured_lit.frag  triangle.frag  triangle.vert
src/: .clang-format  VulkanEngine.cpp  VulkanEngine.h  camera.h  deletion_queue.h  main.cpp  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_textures.cpp  vk_textures.h  vk_types.h
src/shaders/: compile.bat  shader.slang
